@@ -1,5 +1,20 @@
 #!/bin/bash
-
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements. See the NOTICE file distributed with this
+# work for additional information regarding copyright ownership. The ASF
+# licenses this file to You under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations
+# under the License.
+#
 abs_path() {
     SOURCE="${BASH_SOURCE[0]}"
     while [[ -h "$SOURCE" ]]; do
@@ -30,9 +45,17 @@ fi
 
 cd ${TOP}
 
+DEFAULT_JAVA_OPTIONS=""
+JAVA_VERSION=$($JAVA -version 2>&1 | awk 'NR==1{gsub(/"/,""); print $3}' \
+              | awk -F'_' '{print $1}')
+if [[ $? -eq 0 && $JAVA_VERSION >  "1.9" ]]; then
+      DEFAULT_JAVA_OPTIONS="--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED"
+fi
+
 echo "Initializing HugeGraph Store..."
 
-${JAVA} -cp ${LIB}/hugegraph-dist-*.jar -Djava.ext.dirs=${LIB}:${PLUGINS} \
-    com.baidu.hugegraph.cmd.InitStore ${CONF}/rest-server.properties
+CP=$(find "${LIB}" "${PLUGINS}" -name "*.jar"  | tr "\n" ":")
+$JAVA -cp $CP ${DEFAULT_JAVA_OPTIONS} \
+org.apache.hugegraph.cmd.InitStore "${CONF}"/rest-server.properties
 
 echo "Initialization finished."
